feat: add frontend (#12)
* astro: init

* client: generate client based on open api specs

* www: add player search feature

* www: create page to view player stats

* seed: fix seed cmd

* scrape: fix race conditions

* player: sort games by most recent

* www: enable auth

* www: add display leagues page

* www: add individual league view

* www: allow creation of rosters

* www: add update roster

* www: allow for deletion of league

* www: fix env

* readme: update

* www: display team name on player

* docs: update
